# speech-to-speech-translator

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml
speech_translator/: __main__.py  cli.py  config.py  orchestrator.py
speech_translator/core/: audio.py  downloader.py  gemini.py
tests/: conftest.py  test_cli.py  test_config.py  test_orchestrator.py
tests/core/: test_audio.py  test_gemini.py  test_gemini_dialogue.py
